--- a/MusicRec_Col_Filtering.Rmd
+++ b/MusicRec_Col_Filtering.Rmd
@@ -32,10 +32,10 @@ paste("Range of ratings: (" ,min(MusicRatings["rating"]),",",max(MusicRatings["r
 ```
 
 1. ## Train Test Split
-a) Training set with 84% of the observations.<br/>
-b) Validation set A to be used for tuning the collaborative filtering model, with 4% of the observations.<br/>
-c) Validation set B to be used for blending, with 4% of the observations.
-d) Testing set with 8% of the observations
+#### a) Training set with 84% of the observations.<br/>
+#### b) Validation set A to be used for tuning the collaborative filtering model, with 4% of the observations.<br/>
+#### c) Validation set B to be used for blending, with 4% of the observations.
+#### d) Testing set with 8% of the observations
 ```{r}
 set.seed(345)
 train.ids <- sample(nrow(MusicRatings), 0.92*nrow(MusicRatings))
@@ -56,7 +56,7 @@ valA <- val[valA.ids,]
 valB <- val[-valA.ids,]
 ```
 
-e) construct an incomplet training set ratings matrix.
+#### e) construct an incomplet training set ratings matrix.
 ```{r}
 mat.train <- Incomplete(train$userID, train$songID, train$rating)
 
