--- a/MusicRec_Col_Filtering.Rmd
+++ b/MusicRec_Col_Filtering.Rmd
@@ -63,6 +63,19 @@ mat.train <- Incomplete(train$userID, train$songID, train$rating)
 paste("Dimension of the matrix", dim(mat.train)[1], "*", dim(mat.train)[2])
 ```
 
+## 2. Models
+Let $X$ denote the “complete” ratings matrix, i.e., $X_{i,j}$ denotes either the observed
+rating if user i actually rated song j or the “hypothetical” such rating if user i has not yet
+rated song j. We are interested in predicting the values of $X_{i,j}$ that are not observed. Let us
+first consider the following model: <br/>
+$X_{i,j} = \alpha_{i} + \beta_{j} + \epsilon_{i,j}$ <br/>
+
+where $\alpha_i$ is a coefficient that depends only on the particular row i (i.e., user), "j is a coefficient
+that depends only on the particular column j (i.e., song), and $\epsilon_{i,j}$ is a noise term.
+
+#### i) Parameters
+There are two types of parameters in this model $\alpha$ and $\beta$; A total of 2421 $\alpha$ and 807 $\beta$. So there are 3228 parameters to fit. <br/>
+There're 243104 observations in the training set, so we'll train the model with 243104 observations and fill in the rest of the matrix.
 
 
 
