--- a/MusicRec_Col_Filtering.Rmd
+++ b/MusicRec_Col_Filtering.Rmd
@@ -2,7 +2,7 @@
 title: "MusicRec_Col_Filtering"
 author: "Yitong Chen"
 date: "10/25/2020"
-output: md_document
+output: html_document
 ---
 
 ```{r setup, include=FALSE}
@@ -68,9 +68,8 @@ Let $X$ denote the “complete” ratings matrix, i.e., $X_{i,j}$ denotes either
 rating if user i actually rated song j or the “hypothetical” such rating if user i has not yet
 rated song j. We are interested in predicting the values of $X_{i,j}$ that are not observed. Let us
 first consider the following model: <br/>
-<p align="justify">
-__$X_{i,j} = \alpha_{i} + \beta_{j} + \epsilon_{i,j}$__ 
-</p>
+<div align="center"> $X_{i,j} = \alpha_{i} + \beta_{j} + \epsilon_{i,j}$
+</div>
 <br/>
 
 where $\alpha_i$ is a coefficient that depends only on the particular row i (i.e., user), "j is a coefficient
